Etapa2/parser.output
Terminais sem uso na gramática

   TK_PR_IF
   TK_PR_THEN
   TK_PR_ELSE
   TK_PR_WHILE
   TK_PR_DO
   TK_PR_INPUT
   TK_PR_OUTPUT
   TK_PR_RETURN
   TK_PR_CONST
   TK_PR_STATIC
   TK_PR_FOREACH
   TK_PR_FOR
   TK_PR_SWITCH
   TK_PR_CASE
   TK_PR_BREAK
   TK_PR_CONTINUE
   TK_PR_CLASS
   TK_PR_PRIVATE
   TK_PR_PUBLIC
   TK_PR_PROTECTED
   TK_PR_END
   TK_PR_DEFAULT
   TK_OC_LE
   TK_OC_GE
   TK_OC_EQ
   TK_OC_NE
   TK_OC_AND
   TK_OC_OR
   TK_OC_SL
   TK_OC_SR
   TK_OC_FORWARD_PIPE
   TK_OC_BASH_PIPE
   TK_LIT_INT
   TK_LIT_FLOAT
   TK_LIT_FALSE
   TK_LIT_TRUE
   TK_LIT_CHAR
   TK_LIT_STRING
   TOKEN_ERRO


Gramática

    0 $accept: programa $end

    1 programa: global_var

    2 global_var: var_definition ';'

    3 var_definition: type var_list

    4 type: TK_PR_INT
    5     | TK_PR_FLOAT
    6     | TK_PR_CHAR
    7     | TK_PR_BOOL
    8     | TK_PR_STRING

    9 var_list: var var_list
   10         | var

   11 var: TK_IDENTIFICADOR '[' TK_PR_INT ']'
   12    | TK_IDENTIFICADOR


Terminais, com as regras onde eles aparecem

$end (0) 0
';' (59) 2
'[' (91) 11
']' (93) 11
error (256)
TK_PR_INT (258) 4 11
TK_PR_FLOAT (259) 5
TK_PR_BOOL (260) 7
TK_PR_CHAR (261) 6
TK_PR_STRING (262) 8
TK_PR_IF (263)
TK_PR_THEN (264)
TK_PR_ELSE (265)
TK_PR_WHILE (266)
TK_PR_DO (267)
TK_PR_INPUT (268)
TK_PR_OUTPUT (269)
TK_PR_RETURN (270)
TK_PR_CONST (271)
TK_PR_STATIC (272)
TK_PR_FOREACH (273)
TK_PR_FOR (274)
TK_PR_SWITCH (275)
TK_PR_CASE (276)
TK_PR_BREAK (277)
TK_PR_CONTINUE (278)
TK_PR_CLASS (279)
TK_PR_PRIVATE (280)
TK_PR_PUBLIC (281)
TK_PR_PROTECTED (282)
TK_PR_END (283)
TK_PR_DEFAULT (284)
TK_OC_LE (285)
TK_OC_GE (286)
TK_OC_EQ (287)
TK_OC_NE (288)
TK_OC_AND (289)
TK_OC_OR (290)
TK_OC_SL (291)
TK_OC_SR (292)
TK_OC_FORWARD_PIPE (293)
TK_OC_BASH_PIPE (294)
TK_LIT_INT (295)
TK_LIT_FLOAT (296)
TK_LIT_FALSE (297)
TK_LIT_TRUE (298)
TK_LIT_CHAR (299)
TK_LIT_STRING (300)
TK_IDENTIFICADOR (301) 11 12
TOKEN_ERRO (302)


Não terminais com as regras onde eles aparecem

$accept (51)
    à esquerda: 0
programa (52)
    à esquerda: 1, à direita: 0
global_var (53)
    à esquerda: 2, à direita: 1
var_definition (54)
    à esquerda: 3, à direita: 2
type (55)
    à esquerda: 4 5 6 7 8, à direita: 3
var_list (56)
    à esquerda: 9 10, à direita: 3 9
var (57)
    à esquerda: 11 12, à direita: 9 10


Estado 0

    0 $accept: . programa $end

    TK_PR_INT     deslocar, e ir ao estado 1
    TK_PR_FLOAT   deslocar, e ir ao estado 2
    TK_PR_BOOL    deslocar, e ir ao estado 3
    TK_PR_CHAR    deslocar, e ir ao estado 4
    TK_PR_STRING  deslocar, e ir ao estado 5

    programa        ir ao estado 6
    global_var      ir ao estado 7
    var_definition  ir ao estado 8
    type            ir ao estado 9


Estado 1

    4 type: TK_PR_INT .

    $padrão  reduzir usando a regra 4 (type)


Estado 2

    5 type: TK_PR_FLOAT .

    $padrão  reduzir usando a regra 5 (type)


Estado 3

    7 type: TK_PR_BOOL .

    $padrão  reduzir usando a regra 7 (type)


Estado 4

    6 type: TK_PR_CHAR .

    $padrão  reduzir usando a regra 6 (type)


Estado 5

    8 type: TK_PR_STRING .

    $padrão  reduzir usando a regra 8 (type)


Estado 6

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 10


Estado 7

    1 programa: global_var .

    $padrão  reduzir usando a regra 1 (programa)


Estado 8

    2 global_var: var_definition . ';'

    ';'  deslocar, e ir ao estado 11


Estado 9

    3 var_definition: type . var_list

    TK_IDENTIFICADOR  deslocar, e ir ao estado 12

    var_list  ir ao estado 13
    var       ir ao estado 14


Estado 10

    0 $accept: programa $end .

    $padrão  aceitar


Estado 11

    2 global_var: var_definition ';' .

    $padrão  reduzir usando a regra 2 (global_var)


Estado 12

   11 var: TK_IDENTIFICADOR . '[' TK_PR_INT ']'
   12    | TK_IDENTIFICADOR .

    '['  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 12 (var)


Estado 13

    3 var_definition: type var_list .

    $padrão  reduzir usando a regra 3 (var_definition)


Estado 14

    9 var_list: var . var_list
   10         | var .

    TK_IDENTIFICADOR  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 10 (var_list)

    var_list  ir ao estado 16
    var       ir ao estado 14


Estado 15

   11 var: TK_IDENTIFICADOR '[' . TK_PR_INT ']'

    TK_PR_INT  deslocar, e ir ao estado 17


Estado 16

    9 var_list: var var_list .

    $padrão  reduzir usando a regra 9 (var_list)


Estado 17

   11 var: TK_IDENTIFICADOR '[' TK_PR_INT . ']'

    ']'  deslocar, e ir ao estado 18


Estado 18

   11 var: TK_IDENTIFICADOR '[' TK_PR_INT ']' .

    $padrão  reduzir usando a regra 11 (var)
